--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -2,9 +2,9 @@ name: Java CI & CD with Gradle
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "develop" ]
   # pull_request:
-  #   branches: [ "main" ]
+  #   branches: [ "develop" ]
 
 permissions:
   contents: read
