--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -57,7 +57,7 @@ jobs:
         host: ${{ secrets.HOST }}
         key: ${{ secrets.KEY }}
         port: 22
-        source: "./deploy.sh"
+        source: "./scripts/"
         target: "/home/ubuntu/"
         
 
@@ -69,7 +69,7 @@ jobs:
         host: ${{ secrets.HOST }}
         key: ${{ secrets.KEY }}
         port: 22
-        source: "./homepage/docker-compose.yml"
+        source: "./docker-compose.yml"
         target: "/home/ubuntu/"
         
         
