[chore] : Update cicd.yml

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -82,6 +82,7 @@ jobs:
         key: ${{ secrets.KEY }}
         script: |
           sudo docker pull ${{ secrets.DOCKER_REPO }}/blue-green
-          chmod 777 ./deploy.sh
+          chmod 777 ./scripts/deploy.sh
+          cp ./scripts/deploy.sh ./deploy.sh
           ./deploy.sh
           docker image prune -f
