--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,13 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+
+
 	//security
 //	implementation 'org.springframework.boot:spring-boot-starter-security'
 
