--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,16 @@ dependencies {
 
 
 	//security
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+
+	//jwt
+	implementation group: 'com.auth0', name: 'java-jwt', version: '4.2.1'
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.5'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.5'
+
+	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
+	implementation 'com.auth0:jwks-rsa:0.21.1'
 
 	//lombok
 	compileOnly 'org.projectlombok:lombok'
