[add] : redis, csv 일단 추가

--- a/build.gradle
+++ b/build.gradle
@@ -30,9 +30,8 @@ dependencies {
     //validation
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
-
 	//security
-//	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
 
 	//jwt
 	implementation group: 'com.auth0', name: 'java-jwt', version: '4.2.1'
@@ -43,16 +42,22 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'com.auth0:jwks-rsa:0.21.1'
 
+	//csv
+//	implementation 'com.opencsv:opencsv:5.5'
+
 	//webClient
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+	//redis
+//	implementation 'org.springframework.boot:spring-boot-starter-data-redis:2.3.1.RELEASE'
 
 	//lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 
 	//db
-//	runtimeOnly 'com.mysql:mysql-connector-j'
-	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
+	runtimeOnly 'com.mysql:mysql-connector-j'
+//	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
